--- a/Contact/index.html
+++ b/Contact/index.html
@@ -20,7 +20,8 @@
     </main>
     
     <footer>
-        <h3>This is my footer</h3>
+        <h3>Follow me on Twitter:</h3>
+        <h3>Lets link:</h3>
     </footer>
 </body>
 </html>
