--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="About/index.html" rel="noreferrer"><button>About</button></a>
         <a href="Contact/index.html" rel="noreferrer"><button>Contact</button></a>
         <a href="Resume/index.html" rel="noreferrer"><button>Resume</button></a>
+        <script src="main.js" defer></script>
     </nav>
 
     <main>
