--- a/Resume/index.html
+++ b/Resume/index.html
@@ -12,7 +12,7 @@
     <nav>
         <a href="../index.html" rel="noreferrer"><button>Home</button></a>
         <a href="../About/index.html" rel="noreferrer"><button>About</button></a>
-        <a href="../Contact/index.html" rel="noreferrer"><button>Contact</button></a>
+        <a href="../Projects/index.html" rel="noreferrer"><button>Projects</button></a>
         <a href="index.html" rel="noreferrer"><button>Resume</button></a>
         <script src="app.js" defer></script>
     </nav>
@@ -29,8 +29,8 @@
     </main>
     
     <footer>
-        <h3>Follow me on Twitter:</h3>
         <h3>Lets link:</h3>
+        
     </footer>
 </body>
 </html>
