--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <nav>
         <a href="index.html" rel="noreferrer"><button>Home</button></a>
         <a href="About/index.html" rel="noreferrer"><button>About</button></a>
-        <a href="Contact/index.html" rel="noreferrer"><button>Contact</button></a>
         <a href="Resume/index.html" rel="noreferrer"><button>Resume</button></a>
+        <a href="Projects/index.html" rel="noreferrer"><button>Projects</button></a>
         <script src="main.js" defer></script>
     </nav>
 
     <main>
         <h1>Hi, I'm Scott Higashi</h1>
         <p>Software Engineer student, based in LA, California</p>
+        <img src="Self.jpeg"class="pic">
     </main>
     
     <footer>
-        <h3>Follow me on Twitter:</h3>
         <h3>Lets link:</h3>
     </footer>
 </body>
