--- a/Projects/index.html
+++ b/Projects/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link href="../main.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a href="../index.html" rel="noreferrer"><button>Home</button></a>
-        <a href="../About/index.html" rel="noreferrer"><button>About</button></a>
-        <a href="../Resume/index.html" rel="noreferrer"><button>Resume</button></a>
-        <a href="index.html" rel="noreferrer"><button>Projects</button></a>
-        <script src="../main.js" defer></script>
+    <nav class="nav_container">
+        <a href="../index.html" rel="noreferrer"><div>HOME</div></a>
+        <a href="../About/index.html" rel="noreferrer"><div>ABOUT</div></a>
+        <a href="../Resume/index.html" rel="noreferrer"><div>RESUME</div></a>
+        <a href="index.html" rel="noreferrer"><div>PROJECTS</div></a>
+        <script src="app.js" defer></script>
     </nav>
 
     <main>
@@ -23,7 +24,17 @@
     </main>
     
     <footer>
-        <h3>Lets link:</h3>
+        <div>
+            <a href="https://www.linkedin.com/in/scott-higashi/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </div>
+            
+        <div>
+            <a href="https://github.com/Masato-88" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
     </footer>
 </body>
 </html>
