--- a/Resume/index.html
+++ b/Resume/index.html
@@ -22,7 +22,7 @@
     <div id="modal">
         <!-- <div id="modal-textbox"> -->
             <button id="close">Close</button>
-            <iframe src="ScottHigashi_Resume (1) copy.pdf" allowfullscreen="true" id="pdf"></iframe>
+            <iframe src="Resume_UD_8_25.pdf" allowfullscreen="true" id="pdf"></iframe>
         <!-- </div> -->
     </div>
     <main>
