--- a/Projects/index.html
+++ b/Projects/index.html
@@ -21,13 +21,13 @@
     <main>
         <h1>Projects</h1>
         <div class="project-card">
-            <img src="Placeholder.png" alt="Project Placeholder">
-            <h3>Project 1</h3>
+            <img src="Meridio_SS.png" alt="Project Placeholder">
+            <h3>Meridio</h3>
           </div>
          
           <div class="project-card">
-              <img src="Placeholder.png" alt="Project Placeholder">
-              <h3>Project 2</h3>
+              <img src="Crypto_Feed.png" alt="Project Placeholder">
+              <h3>Crypto Feed</h3>
             </div>
     </main>
     
