Added links to projects

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -21,14 +21,18 @@
     <main>
         <h1>Projects</h1>
         <div class="project-card">
-            <img src="Meridio_SS.png" alt="Project Placeholder">
-            <h3>Meridio</h3>
-          </div>
+            <a href="https://meridio-b1615a040797.herokuapp.com/" target="_blank">
+                <h3>Meridio</h3>
+                <img src="Meridio_SS.png" alt="Project Placeholder"> 
+            </a>  
+        </div>
          
-          <div class="project-card">
-              <img src="Crypto_Feed.png" alt="Project Placeholder">
-              <h3>Crypto Feed</h3>
-            </div>
+        <div class="project-card">
+            <a href="https://cryptofeed-d651c2bc9219.herokuapp.com/" target="_blank">
+                <h3>Crypto Feed</h3>
+                <img src="Crypto_Feed.png" alt="Project Placeholder">
+            </a>     
+        </div>
     </main>
     
     <footer>
